<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_beige"
    android:padding="32dp"
    tools:context="lat.pam.plantshop.RegisterActivity"> <TextView
    android:id="@+id/register_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register_title"
    android:textColor="@color/text_dark"
    android:textSize="32sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.1"
    app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_text_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/fullname_hint"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:textColorHint="@color/secondary_khaki"
        android:textColor="@color/text_dark"
        android:minHeight="48dp"
        android:backgroundTint="@color/primary_green"
        app:layout_constraintTop_toBottomOf="@id/register_title" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        android:textColorHint="@color/secondary_khaki"
        android:textColor="@color/text_dark"
        android:minHeight="48dp"
        android:backgroundTint="@color/primary_green"
        app:layout_constraintTop_toBottomOf="@id/edit_text_fullname" />

    <EditText
        android:id="@+id/edit_text_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColorHint="@color/secondary_khaki"
        android:textColor="@color/text_dark"
        android:minHeight="48dp"
        android:backgroundTint="@color/primary_green"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email" />

    <EditText
        android:id="@+id/edit_text_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColorHint="@color/secondary_khaki"
        android:textColor="@color/text_dark"
        android:minHeight="48dp"
        android:backgroundTint="@color/primary_green"
        app:layout_constraintTop_toBottomOf="@id/edit_text_reg_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register_button_text"
        android:backgroundTint="@color/primary_green"
        android:textColor="@color/white"
        android:minHeight="56dp"
        android:onClick="registerUser"
        app:layout_constraintTop_toBottomOf="@id/edit_text_confirm_password" />

    <TextView
        android:id="@+id/text_login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_link_text"
        android:textColor="@color/text_dark"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openLoginActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_register" />

</androidx.constraintlayout.widget.ConstraintLayout>