<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_beige"
    android:padding="32dp"
    tools:context="lat.pam.plantshop.AuthActivity"> <TextView
    android:id="@+id/app_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textColor="@color/text_dark"
    android:textSize="32sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/login_card" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_username_hint"
                android:inputType="textEmailAddress"
                android:autofillHints="email"
                android:textColorHint="@color/secondary_khaki"
                android:textColor="@color/text_dark"
                android:layout_marginBottom="16dp"
                android:minHeight="48dp"
                android:backgroundTint="@color/primary_green"/>

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:textColorHint="@color/secondary_khaki"
                android:textColor="@color/text_dark"
                android:layout_marginBottom="24dp"
                android:minHeight="48dp"
                android:backgroundTint="@color/primary_green"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:backgroundTint="@color/primary_green"
                android:textColor="@color/white"
                android:minHeight="56dp"
                android:onClick="openHomeActivity"/>

            <TextView
                android:id="@+id/text_register_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_link_text"
                android:textColor="@color/text_dark"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openRegisterActivity"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>