<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_beige"
    android:padding="32dp"
    tools:context="lat.pam.plantshop.ConfirmationActivity">

    <TextView
        android:id="@+id/text_confirmation_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_title"
        android:textColor="@color/text_dark"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image_success"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_check_circle"
        android:contentDescription="Ikon Sukses"
        android:tint="@color/primary_green"
        app:layout_constraintTop_toBottomOf="@id/text_confirmation_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_confirmation_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_message"
        android:textColor="@color/text_dark"
        android:textSize="16sp"
        android:lineSpacingExtra="4dp"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/image_success"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_back_to_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:backgroundTint="@color/primary_green"
        android:textColor="@color/white"
        android:minHeight="56dp"
        android:onClick="backToHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>